# workflow-parsers

./: .gitignore  CITATION.cff  README.md  docker-compose.yml  nomad.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  python-actions.yaml
tests/: conftest.py  test_aflowparser.py  test_asrparser.py  test_atomateparser.py  test_elasticparser.py  test_fhivibesparser.py  test_files.py  test_lobsterparser.py  test_mofstructuresparser.py  test_mpparser.py  test_phonopyparser.py  test_quantum_espresso_epw.py  test_quantum_espresso_phonon.py  test_quantum_espresso_xspectra.py
tests/data/aflow/Ag1Co1O2_ICSD_246157/: AECCAR0.static.xz  AECCAR2.static.xz  ARUN.AEL_0_SF_N_1_0.99  ARUN.AEL_10_SF_N_3_1.005  ARUN.AEL_11_SF_N_3_1.01  ARUN.AEL_12_SF_S_1_0.99  ARUN.AEL_13_SF_S_1_0.995  ARUN.AEL_14_SF_S_1_1.005  ARUN.AEL_15_SF_S_1_1.01  ARUN.AEL_16_SF_S_2_0.99  ARUN.AEL_17_SF_S_2_0.995  ARUN.AEL_18_SF_S_2_1.005  ARUN.AEL_19_SF_S_2_1.01  ARUN.AEL_1_SF_N_1_0.995  ARUN.AEL_20_SF_S_3_0.99  ARUN.AEL_21_SF_S_3_0.995  ARUN.AEL_22_SF_S_3_1.005  ARUN.AEL_23_SF_S_3_1.01  ARUN.AEL_2_SF_N_1_1.005  ARUN.AEL_3_SF_N_1_1.01  ARUN.AEL_4_SF_N_2_0.99  ARUN.AEL_5_SF_N_2_0.995  ARUN.AEL_6_SF_N_2_1.005  ARUN.AEL_7_SF_N_2_1.01  ARUN.AEL_8_SF_N_3_0.99  ARUN.AEL_9_SF_N_3_0.995  ARUN.AGL_0_SF_0.86  ARUN.AGL_10_SF_0.96  ARUN.AGL_11_SF_0.97  ARUN.AGL_12_SF_0.98  ARUN.AGL_13_SF_0.99  ARUN.AGL_14_SF_1  ARUN.AGL_15_SF_1.01  ARUN.AGL_16_SF_1.02  ARUN.AGL_17_SF_1.03  ARUN.AGL_18_SF_1.04  ARUN.AGL_19_SF_1.05  ARUN.AGL_1_SF_0.87  ARUN.AGL_20_SF_1.06  ARUN.AGL_21_SF_1.07  (+105 more)
tests/data/aflow/MgO/: LOCK.nonpolar  PHDOSCAR.xz  PHEIGENVAL.xz  PHKPOINTS.xz  PHPOSCAR.xz  aflow.agroup.out.xz  aflow.apl.DYNMAT.out.xz  aflow.apl.displacements.out.xz  aflow.apl.fccalc_state.out.xz  aflow.apl.group_velocities.out.xz  aflow.apl.harmonicIFCs.xml.xz  aflow.apl.hskpoints.out.xz  aflow.apl.phonon_dispersion.out.xz  aflow.apl.phonon_dos.out.xz  aflow.apl.polar.xml.xz  aflow.apl.thermodynamic_properties.out.xz  aflow.end.out  aflow.fgroup.out.xz  aflow.iatoms.out.xz  aflow.in  aflow.pgroup.out.xz  aflow.pgroup_xtal.out.xz  aflow.pgroupk.out.xz  aflow.pgroupk_Patterson.out.xz  aflow.pgroupk_xtal.out.xz  aflow.sgroup.out.xz
tests/data/asr/: Si.json
tests/data/atomate/mp-149/: mp-149_dielectric.json  mp-149_eos.json  mp-149_magnetism.json  mp-149_piezoelectric.json  mp-149_surface_properties.json  mp-149_thermo.json
tests/data/elastic/2nd/: input.xml
tests/data/elastic/3rd/: Distorted_Parameters  E-3rd.out  ElaStic_3rd.in  ElaStic_3rd.out  INFO_ElaStic  input.xml  sgroup.out
tests/data/fhivibes/: phonopy.nc  relaxation.nc  singlepoint.nc  trajectory.son
tests/data/lobster/BaTiO3/: BWDF.lobster  BWDFCOHP.lobster  CHARGE.lobster  CHGCAR  COBICAR.lobster  COHPCAR.lobster  CONTCAR  COOPCAR.lobster  DOSCAR  DOSCAR.lobster  EIGENVAL  GROSSPOP.lobster  IBZKPT  ICOBILIST.lobster  ICOHPLIST.lobster  ICOOPLIST.lobster  INCAR  KPOINTS  MadelungEnergies.lobster  OSZICAR  OUTCAR  POSCAR  SitePotentials.lobster  XDATCAR  lobsterin  lobsterout  projectionData.lobster
tests/data/lobster/Fe/: BWDF.lobster  BWDFCOHP.lobster  CHARGE.lobster  COHPCAR.lobster  CONTCAR  COOPCAR.lobster  DOSCAR.lobster  DensityOfEnergy.lobster  GROSSPOP.lobster  ICOHPLIST.lobster  ICOOPLIST.lobster  INCAR  OUTCAR  RMSp.lobster  bandOverlaps.lobster  lobsterin  lobsterout  vasprun.archive.json  vasprun.xml
tests/data/lobster/HfV2/: DOSCAR.lobster  (+4 more)
tests/data/mofstructures/: mof_1_archive.json  mof_EDUSIF_calculation.out
tests/data/quantum_espresso_epw/: epw.out
tests/data/quantum_espresso_phonon/: ph.out
workflowparsers/: __init__.py
workflowparsers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
workflowparsers/aflow/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/aflow/metainfo/: __init__.py  aflow.py
workflowparsers/asr/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/asr/metainfo/: __init__.py  asr.py
workflowparsers/atomate/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/atomate/metainfo/: __init__.py  atomate.py
workflowparsers/elastic/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/elastic/metainfo/: __init__.py  elastic.py
workflowparsers/fhivibes/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/fhivibes/metainfo/: __init__.py  fhi_vibes.py
workflowparsers/lobster/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py  utils.py  workflow.py
workflowparsers/lobster/metainfo/: __init__.py  lobster.py
workflowparsers/lobster/schema_packages/: __init__.py  lobsterworkflow.py
workflowparsers/mofstructures/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/mofstructures/metainfo/: __init__.py  mofstructures.py
workflowparsers/mp/: README.md  __init__.py  __main__.py  metadata.yaml  parser.py
workflowparsers/mp/metainfo/: __init__.py  mp.py
workflowparsers/phonopy/: README.md  __init__.py  __main__.py  calculator.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/phonopy/metainfo/: __init__.py  phonopy.py
workflowparsers/quantum_espresso_bands/: README.md  __init__.py  __main__.py  nomad_plugin.yaml  parser.py  parsers.py
workflowparsers/quantum_espresso_epw/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/quantum_espresso_epw/metainfo/: __init__.py  quantum_espresso_epw.py
workflowparsers/quantum_espresso_phonon/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/quantum_espresso_phonon/metainfo/: __init__.py  quantum_espresso_phonon.py
workflowparsers/quantum_espresso_xspectra/: README.md  __init__.py  __main__.py  metadata.yaml  nomad_plugin.yaml  parser.py
workflowparsers/quantum_espresso_xspectra/metainfo/: __init__.py  quantum_espresso_xspectra.py
(+541 files in other folders)
