[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'workflowparsers'
version = '1.0'
description = 'Collection of NOMAD parsers for workflow engines.'
readme = "README.md"
authors = [{ name = "The NOMAD Authors" }]
license = { file = "LICENSE" }
dependencies = [
    'nomad-lab[infrastructure]@git+https://github.com/nomad-coe/nomad.git#egg=develop',
    'lxml',
    'asr',
    'xarray>=0.19.0',
    'phonopy',
    'h5py>=3.4.0',
]

[project.urls]
homepage = "https://github.com/nomad-coe/electronic-parsers"

[project.optional-dependencies]
tests = [
    'mypy==1.0.1',
    'pylint==2.13.9',
    'pylint_plugin_utils==0.5',
    'pycodestyle==2.8.0',
    'pytest==3.10.0',
    'pytest-timeout==1.4.2',
    'pytest-cov==2.7.1',
    'astroid==2.11.7',
    'lxml==4.7.1',
    'asr==0.4.1',
    'xarray==0.20.2',
    'phonopy==2.11.0',
    'h5py==3.6.0',
    'typing-extensions==4.4.0'
]


[tool.setuptools.packages.find]
include = ["workflowparsers*"]

[tool.setuptools.package-data]
workflowparsers = ['*/metadata.yaml', '*/README.md']
